# mundane

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: docs.yaml  python-ci.yaml
src/mundane/: __init__.py
