[project]
name = "mundane"
version = "0.1.0"
description = "Magic: The Gathering without the, you know, magic"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.2",
    "email-validator>=2.3.0",
    "httpx>=0.27.2",
]

[project.urls]
repository = "https://github.com/letsbuilda/mundane/"
documentation = "https://docs.letsbuilda.dev/mundane/"

[build-system]
requires = ["uv_build>=0.11.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # DX
    "nox>=2026.4.10",
    "pre-commit>=3.7.1",
    # Linters
    "ruff>=0.15.11",
    "mypy>=1.20.1",
]
docs = [
    "sphinx>=7.4.4",
    "furo>=2024.5.6",
    "sphinx-autoapi>=3.8.0",
    "releases>=2.1.1",
]
tests = [
    "pytest>=9.0.3",
    "pytest-randomly>=3.15.0",
    "coverage>=7.13.5",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - See LICENSE file
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/conf.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "S101",   # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.isort]
known-first-party = ["mundane"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source_pkgs = ["mundane"]
source_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
